@@ -3,6 +3,7 @@ Changelog v1.4.1 to v1.5.0
 -Add new Help Tab, display a short help how to use PixelController
 -Add Zoom Effect, add Zoom options (zoom in, zoom out, vertical, horizontal)
 -Add Textwriter option (PingPong scrolling, left scrolling)
+-Add new Minimum and Maximum Mixer
 -Add new keyboard shortcut to select tabs
 -Fix use colorset name (instead of index) if a preset is saved
 -Fix colorscroll GUI element initialization
